first try for geolocation

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
 #sticky-footer {
     flex-shrink: inherit;
     background: gray;
+    bottom: inherit;
 }
 
 /* HEADER CLIENT */
@@ -28,5 +29,12 @@ body {
 
 #dropdownMenuButton:hover {
     display: block;
+}
+
+#availableTruck{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 30px;
+
 }
 
